<package>
  <name>hotspot_urdf</name>
  <version>0.5.0</version>

  <description>This package contains the URDF for hotspot.</description>
  <author email="doal8589@colorado.edu">Doncey Albin!!</author>

  <maintainer email="doal8589@colorado.edu">Doncey Albin!!</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>xacro</run_depend>

</package>
